--- a/MemoryGame/Base.lproj/Main.storyboard
+++ b/MemoryGame/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_0" orientation="portrait">
+    <device id="retina6_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,47 +15,34 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MemoryGame" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="0SD-6X-fUV">
-                                <rect key="frame" x="164" y="20" width="110" height="200"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="0SD-6X-fUV">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vZh-SV-eu1">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="393"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <state key="normal" title="Pulsa y juega">
+                                            <color key="titleColor" red="1" green="0.0" blue="0.024170271520000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="playerRandom:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XJS-Hu-deb"/>
+                                        </connections>
+                                    </button>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pelota" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Aaq-5o-q7g">
+                                        <rect key="frame" x="0.0" y="392.99999999999994" width="414.00000000000011" height="425.00000000000017"/>
+                                    </imageView>
+                                </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vZh-SV-eu1">
-                                <rect key="frame" x="120" y="135" width="169" height="48"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="169" id="e8E-9I-w9g"/>
-                                    <constraint firstAttribute="height" constant="48" id="h1a-rk-HUR"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <state key="normal" title="Pulsa y juega">
-                                    <color key="titleColor" red="1" green="0.0" blue="0.024170271520000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="playerRandom:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XJS-Hu-deb"/>
-                                </connections>
-                            </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pelota" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Aaq-5o-q7g">
-                                <rect key="frame" x="51.5" y="177" width="217.00000000000011" height="214.00000000000011"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="217" id="HhE-TT-LAS"/>
-                                    <constraint firstAttribute="height" constant="214" id="n7L-HB-OFQ"/>
-                                </constraints>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="vZh-SV-eu1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="120" id="HoB-dY-5sK">
-                                <variation key="heightClass=compact-widthClass=regular" constant="320"/>
-                            </constraint>
-                            <constraint firstItem="Aaq-5o-q7g" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="b24-cL-YtI">
-                                <variation key="heightClass=compact-widthClass=regular" constant="60"/>
-                            </constraint>
-                            <constraint firstItem="Aaq-5o-q7g" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="f32-gl-k4E"/>
-                            <constraint firstItem="vZh-SV-eu1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="125" id="hlC-jI-LOT">
-                                <variation key="heightClass=compact-widthClass=regular" constant="80"/>
-                            </constraint>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0SD-6X-fUV" secondAttribute="trailing" id="Nzq-c1-bY1"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0SD-6X-fUV" secondAttribute="bottom" id="XDt-gI-R1E"/>
+                            <constraint firstItem="0SD-6X-fUV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="joS-XY-mWY"/>
+                            <constraint firstItem="0SD-6X-fUV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="oXk-2c-UAB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -73,14 +60,14 @@
             <objects>
                 <viewController id="OdF-x2-uuz" customClass="Photos" customModule="MemoryGame" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" opaque="NO" contentMode="scaleToFill" id="c7f-9g-qda">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="QTd-Ko-l23">
-                                <rect key="frame" x="10" y="40" width="310" height="508"/>
+                                <rect key="frame" x="10" y="64" width="404" height="778"/>
                                 <subviews>
                                     <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="kDF-y1-rml">
-                                        <rect key="frame" x="0.0" y="0.0" width="310" height="508"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="404" height="778"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="RPc-xf-yy9">
                                             <size key="itemSize" width="123" height="123"/>
@@ -114,25 +101,25 @@
                                         </cells>
                                     </collectionView>
                                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Has ganado!!!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1gh-Io-lmY">
-                                        <rect key="frame" x="0.0" y="0.0" width="310" height="0.0"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="404" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Has perdido!!!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JLk-7Y-FH6">
-                                        <rect key="frame" x="0.0" y="0.0" width="310" height="0.0"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="404" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¿Quieres volver a jugar?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ACp-6k-rTY">
-                                        <rect key="frame" x="0.0" y="0.0" width="310" height="0.0"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="404" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dQD-XD-wKe">
-                                        <rect key="frame" x="0.0" y="0.0" width="310" height="0.0"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="404" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <state key="normal" title="Jugar">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
